--- a/WeatherApp/Resources/Base.lproj/Main.storyboard
+++ b/WeatherApp/Resources/Base.lproj/Main.storyboard
@@ -43,17 +43,29 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="earthBackground" translatesAutoresizingMaskIntoConstraints="NO" id="cr2-C1-T1n">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ks5-Hj-41z">
+                                <rect key="frame" x="0.0" y="490" width="375" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="spO-nV-84K"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.20611395946009509" green="0.32021544818177211" blue="0.46632326748704656" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="Ks5-Hj-41z" firstAttribute="trailing" secondItem="cr2-C1-T1n" secondAttribute="trailing" id="2cA-3k-E1L"/>
                             <constraint firstItem="TKF-75-ABZ" firstAttribute="bottom" secondItem="cr2-C1-T1n" secondAttribute="bottom" id="MPN-s3-6AS"/>
                             <constraint firstItem="cr2-C1-T1n" firstAttribute="top" secondItem="mXf-Bu-n2G" secondAttribute="top" id="WyL-Ap-lxa"/>
                             <constraint firstItem="TKF-75-ABZ" firstAttribute="trailing" secondItem="cr2-C1-T1n" secondAttribute="trailing" id="eHI-sN-3fs"/>
                             <constraint firstItem="cr2-C1-T1n" firstAttribute="leading" secondItem="TKF-75-ABZ" secondAttribute="leading" id="hRi-VK-lHn"/>
+                            <constraint firstItem="Ks5-Hj-41z" firstAttribute="bottom" secondItem="TKF-75-ABZ" secondAttribute="bottom" id="xMV-b4-g6u"/>
+                            <constraint firstItem="Ks5-Hj-41z" firstAttribute="leading" secondItem="cr2-C1-T1n" secondAttribute="leading" id="y6l-G8-riw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="TKF-75-ABZ"/>
                     </view>
                     <navigationItem key="navigationItem" id="1O9-Or-Kmz"/>
+                    <connections>
+                        <outlet property="gifImageView" destination="Ks5-Hj-41z" id="juy-zN-QiW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i6m-Jy-mbl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -132,7 +144,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uoH-iQ-BAt">
-                                                    <rect key="frame" x="0.0" y="51.5" width="375" height="1"/>
+                                                    <rect key="frame" x="0.0" y="52" width="375" height="1"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="1" id="u7i-Bn-yxX"/>
